[package]
name = "rollup-proof-status"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = "0.4.42"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
tokio-test = "0.4"

